--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'  # Change to './docs' if main.html is in a folder
+          path: '.'  # Change this if main.html is in a folder
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
