--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -31,8 +30,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'  # Change this if main.html is in a folder
+          path: './**/*'  # Matches all files and folders
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-
